Bug 47206 - [SNA] sna_blt_copy_init: Assertion `blt->pitch[0] < 32767' failed
Summary: [SNA] sna_blt_copy_init: Assertion `blt->pitch[0] < 32767' failed
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-11 08:29 UTC by Da Fox
Modified: 2012-03-11 12:56 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Backtrace of crash with gdb attached (6.29 KB, text/plain)
2012-03-11 08:30 UTC, Da Fox
no flags Details

Description Da Fox 2012-03-11 08:29:34 UTC
When visiting the following webpage in firefox, and scrolling down the page, an assertion triggers: http://porta.de/ .

src/sna/sna_blt.c:273: sna_blt_copy_init: Assertion `blt->pitch[0] < 32767' failed.



My hardware is a Dell XPS 15 (L502x) laptop with:
00:02.0 VGA compatible controller: Intel Corporation Device 0116 (rev 09)
[    13.803] (II) intel(0): Integrated Graphics Chipset: Intel(R) Sandybridge
Mobile (GT2)

Software versions:
xf86-video-intel: c25a3f7f46010660f441070ab7b9d5d1bc39ed0d
X.org server: x11-base/xorg-server-1.11.2-r2 (gentoo)
Comment 1 Da Fox 2012-03-11 08:30:35 UTC
Created attachment 58287 [details]
Backtrace of crash with gdb attached
Comment 2 Chris Wilson 2012-03-11 12:56:19 UTC
commit 8136bc5e113ae06c30def3c91b1615e5fab8af44
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Mar 11 19:45:55 2012 +0000

    sna: Make the maximum BLT pitch assertions consistent
    
    The maximum permissibly BLT pitch value is 32767, so make the assertions
    match...
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=47206
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.