sna: Make the maximum BLT pitch assertions consistent

The maximum permissibly BLT pitch value is 32767, so make the assertions
match...

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=47206
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>